--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.7.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
     "react": "^19.0.0",
@@ -18,6 +19,7 @@
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
+    "sonner": "^2.0.3",
     "swiper": "^11.2.6"
   },
   "devDependencies": {
