--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aos": "^2.3.4",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.488.0",
+    "moment": "^2.30.1",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
